--- a/package.json
+++ b/package.json
@@ -4,15 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node server.ts"
+    "start": "ts-node server/server.ts",
+    "parser": "ts-node Parser.ts",
+    "test": "./node_modules/.bin/_mocha 'tests/**/*.test.ts'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@testdeck/mocha": "^0.1.2",
+    "@types/chai": "^4.2.22",
     "@types/node": "^16.10.5",
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "eslint": "^8.0.1",
+    "prettier": "^2.4.1"
   }
 }
